Try- catch añadidos en todas las clases.